[gd_scene load_steps=14 format=3 uid="uid://cjijdjnr06w0p"]

[ext_resource type="Script" uid="uid://bn2rph81je8hu" path="res://components/NME/canon.gd" id="1_hv5bc"]
[ext_resource type="Texture2D" uid="uid://cehx641j6xsgu" path="res://assets/Kings and Pigs/Sprites/10-Cannon/Idle.png" id="1_wemop"]
[ext_resource type="Script" uid="uid://pw630imha0ww" path="res://ball_stat.gd" id="2_gnty4"]
[ext_resource type="Texture2D" uid="uid://b8d55vwrwjahy" path="res://assets/Kings and Pigs/Sprites/10-Cannon/Shoot (44x28).png" id="2_hv5bc"]
[ext_resource type="Resource" uid="uid://b1wgulw5o6ahv" path="res://components/projectiles/balls/Ball_Explodable.tres" id="3_072ar"]
[ext_resource type="PackedScene" uid="uid://b21cgmyqi61n0" path="res://components/projectiles/cannon_ball.tscn" id="4_x55pw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jfwpl"]
atlas = ExtResource("1_wemop")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5p5f"]
atlas = ExtResource("2_hv5bc")
region = Rect2(0, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6pe7"]
atlas = ExtResource("2_hv5bc")
region = Rect2(44, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_me3eg"]
atlas = ExtResource("2_hv5bc")
region = Rect2(88, 0, 44, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsljo"]
atlas = ExtResource("2_hv5bc")
region = Rect2(132, 0, 44, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_knv3k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfwpl")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5p5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6pe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me3eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsljo")
}],
"loop": false,
"name": &"Shoot",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jgtw6"]
size = Vector2(19, 18)

[node name="Canon" type="StaticBody2D"]
script = ExtResource("1_hv5bc")
ProjectileStats = Array[ExtResource("2_gnty4")]([ExtResource("3_072ar")])
projectile_scene = ExtResource("4_x55pw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_knv3k")
animation = &"Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.5, 2)
shape = SubResource("RectangleShape2D_jgtw6")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_timer_timeout"]
